@@ -1,3 +1,8 @@
+2011-07-18  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/49675
+	* gfortran.dg/pr49675.f90: New test.
+
 2011-07-17  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gnat.dg/pointer_controlled.adb: New test.
